deploy/k8s/api-gateway/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  template:
    spec:
      containers:
        - name: api-gateway
          image: ghcr.io/tungphuong/gateway.api:latest
          resources:
            limits:
              cpu: "128m"
              memory: "256M"
          ports:
            - containerPort: 80
