deploy/k8s/api-gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway  
spec:
  ports:
  - port: 80
    targetPort: 80
